--- a/src/App.css
+++ b/src/App.css
@@ -884,27 +884,23 @@ html a {
   box-shadow: 0px 0px 13px 8px rgba(163, 143, 133, 0.35);
   -webkit-box-shadow: 0px 0px 13px 8px rgba(163, 143, 133, 0.35);
   -moz-box-shadow: 0px 0px 13px 8px rgba(163, 143, 133, 0.35);
+  animation: fadeIn 1s ease-in-out forwards;
   overflow: hidden; }
   .seeMoreContainerWrapper .seeMoreContainer {
     background-color: #ede9e3;
     border-radius: 20px;
-    opacity: 0;
-    animation: fadeIn 1s ease-in-out forwards;
+    opacity: 100;
     padding: 10px;
     overflow-y: auto;
     max-height: calc(var(--section3Height) - 100px);
     -webkit-overflow-scrolling: touch; }
     .seeMoreContainerWrapper .seeMoreContainer::-webkit-scrollbar {
-      width: 5px;
-      /* Ancho de la barra de scroll */ }
+      width: 5px; }
     .seeMoreContainerWrapper .seeMoreContainer::-webkit-scrollbar-track {
-      background-color: #ede9e3;
-      /* Color de fondo de la pista de la barra de scroll */ }
+      background-color: #ede9e3; }
     .seeMoreContainerWrapper .seeMoreContainer::-webkit-scrollbar-thumb {
       background-color: #d4b2a7;
-      /* Color del pulgar de la barra de scroll */
-      border-radius: 100px;
-      /* Borde redondeado del pulgar */ }
+      border-radius: 100px; }
     .seeMoreContainerWrapper .seeMoreContainer .closeBtn {
       color: #a38f85;
       position: absolute;
