--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -7,7 +7,7 @@
   background-color: $cinereous;
   z-index: 10001;
   animation: slideInFromRight 0.5s ease-in;
-  .closeBtn{
+  .closeBtn {
     color: $light;
     position: absolute;
     font-family: "LoveloBlack";
@@ -15,16 +15,16 @@
     z-index: 200;
     right: 15px;
     top: 10px;
-    font-size: 1rem;
+    font-size: 1.4rem;
   }
-  .sidebarContainer{
+  .sidebarContainer {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: .8fr 2fr;
+    grid-template-rows: 0.8fr 2fr;
     align-items: center;
     height: 100%;
     row-gap: 0px;
-    .sidebarTitleContainer{
+    .sidebarTitleContainer {
       height: 100%;
       width: 100%;
       position: relative;
@@ -32,7 +32,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      &:before{    
+      &:before {
         content: "";
         background-image: url("../src/images/sidebarTitleBackground.jpg");
         background-size: cover;
@@ -42,37 +42,37 @@
         bottom: 0px;
         left: 0px;
         opacity: 0.4;
-      } 
-      .sidebarTitle{
+      }
+      .sidebarTitle {
         color: $light;
         font-family: "loveloBlack";
         position: relative;
         font-size: 1.8rem;
       }
-      .sidebarSubTitle{
+      .sidebarSubTitle {
         position: relative;
         color: $light;
         font-family: "dosisRegular";
         font-size: 1rem;
       }
     }
-    .sidebarFormContainer{
+    .sidebarFormContainer {
       padding-left: 2%;
       padding-right: 2%;
-      form{
+      form {
         display: flex;
         flex-direction: column;
-        .nameSurnameContainer{
-          display: flex; 
+        .nameSurnameContainer {
+          display: flex;
           justify-content: space-between;
         }
-        input{
+        input {
           padding: 2px 10px;
           margin-bottom: 10px;
           font-family: "dosisRegular";
           font-size: 0.8rem;
         }
-        textarea{
+        textarea {
           resize: none;
           font-family: "dosisRegular";
           height: 70px;
@@ -80,13 +80,13 @@
           margin-bottom: 10px;
           font-size: 0.8rem;
         }
-        select{
+        select {
           padding: 5px 10px;
           font-family: "dosisRegular";
           margin-bottom: 10px;
           font-size: 0.8rem;
         }
-        .buttonSubmit{
+        .buttonSubmit {
           background-color: $paleDogwood;
           color: $light;
           border-color: $cinereous;
@@ -94,91 +94,88 @@
           border-radius: 10px;
           margin-top: 10px;
           padding: 8px 0px;
-          font-size: .9rem;
-          &:hover{
+          font-size: 0.9rem;
+          &:hover {
             background-color: $almond;
             color: $dark;
           }
         }
       }
-      .sidebarDescription{
+      .sidebarDescription {
         text-align: center;
         color: $light;
         font-family: "dosisRegular";
         padding-top: 10px;
-        font-size: .8rem;
+        font-size: 0.8rem;
       }
     }
   }
 }
 
-@media only screen and (min-width:768px) {
-  .sidebar { 
+@media only screen and (min-width: 768px) {
+  .sidebar {
     width: 55%;
     height: 70%;
-    .closeBtn{
+    .closeBtn {
       right: 20px;
       top: 10px;
       font-size: 1.4rem;
     }
-    .sidebarContainer{
+    .sidebarContainer {
       grid-template-rows: 1fr 2fr;
     }
   }
 }
 
 @media only screen and (min-width: 1024px) {
-  .sidebar { 
+  .sidebar {
     width: 38%;
     height: 100%;
-    .closeBtn{
+    .closeBtn {
       right: 30px;
       top: 15px;
       font-size: 1.55rem;
     }
-    .sidebarContainer{
+    .sidebarContainer {
       grid-template-rows: 1fr 2fr;
       row-gap: 40px;
-      .sidebarTitleContainer{
-        &:before{
-
-        } 
-        .sidebarTitle{
+      .sidebarTitleContainer {
+        &:before {
+        }
+        .sidebarTitle {
           font-size: 2.18rem;
         }
-        .sidebarSubTitle{
+        .sidebarSubTitle {
           font-size: 1.25rem;
         }
       }
-      .sidebarFormContainer{
+      .sidebarFormContainer {
         padding-left: 10%;
         padding-right: 10%;
-        form{
-          .nameSurnameContainer{
-
+        form {
+          .nameSurnameContainer {
           }
-          input{
+          input {
             font-size: 0.93rem;
           }
-          textarea{
+          textarea {
             height: 75px;
             padding: 5px 10px;
             margin-bottom: 10px;
             font-size: 0.93rem;
           }
-          select{
+          select {
             font-size: 0.93rem;
           }
-          .buttonSubmit{
+          .buttonSubmit {
             margin-top: 20px;
             padding: 10px 5px;
             font-size: 1rem;
-            &:hover{
-
+            &:hover {
             }
           }
         }
-        .sidebarDescription{
+        .sidebarDescription {
           padding-top: 15px;
           font-size: 1rem;
         }
@@ -187,6 +184,6 @@
   }
 }
 
-.sidebarClosed{
-  animation: slideOutToRight .5s ease-out;
+.sidebarClosed {
+  animation: slideOutToRight 0.5s ease-out;
 }
