--- a/src/App.css
+++ b/src/App.css
@@ -563,11 +563,11 @@ html a {
     z-index: 200;
     right: 15px;
     top: 10px;
-    font-size: 1rem; }
+    font-size: 1.4rem; }
   .sidebar .sidebarContainer {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: .8fr 2fr;
+    grid-template-rows: 0.8fr 2fr;
     align-items: center;
     height: 100%;
     row-gap: 0px; }
@@ -633,7 +633,7 @@ html a {
           border-radius: 10px;
           margin-top: 10px;
           padding: 8px 0px;
-          font-size: .9rem; }
+          font-size: 0.9rem; }
           .sidebar .sidebarContainer .sidebarFormContainer form .buttonSubmit:hover {
             background-color: #e7d7c9;
             color: #212121; }
@@ -642,7 +642,7 @@ html a {
         color: #fff;
         font-family: "dosisRegular";
         padding-top: 10px;
-        font-size: .8rem; }
+        font-size: 0.8rem; }
 
 @media only screen and (min-width: 768px) {
   .sidebar {
@@ -691,7 +691,7 @@ html a {
           font-size: 1rem; } }
 
 .sidebarClosed {
-  animation: slideOutToRight .5s ease-out; }
+  animation: slideOutToRight 0.5s ease-out; }
 
 .loadingContainer {
   display: flex;
