--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .navBarContainer {
   font-family: "dosisRegular";
   position: fixed;
@@ -1171,6 +1172,91 @@ html a {
   .loginFormContainer .loginButton {
     border-radius: 10px;
     padding: 5px 30px; }
+
+.loadingContainer {
+  flex: 1;
+  min-height: 90vh; }
+
+.calendarContainer {
+  min-height: 90vh;
+  padding: 1rem;
+  margin-top: 2rem; }
+  .calendarContainer .title {
+    z-index: 2;
+    text-align: center;
+    font-family: "LoveloBlack";
+    padding-top: 20px;
+    padding-bottom: 10px;
+    font-size: 1rem; }
+  .calendarContainer .dateSelectorContainer {
+    margin-top: 2rem;
+    padding: 2rem;
+    flex: 1;
+    display: flex;
+    justify-content: space-evenly; }
+    .calendarContainer .dateSelectorContainer .react-calendar__tile--now {
+      background-color: #e7d7c9;
+      /* Elimina el color amarillo */ }
+    .calendarContainer .dateSelectorContainer .react-calendar__tile--now:hover {
+      background-color: #ede9e3; }
+    .calendarContainer .dateSelectorContainer .event-day {
+      position: relative; }
+    .calendarContainer .dateSelectorContainer .event-day::after {
+      content: '';
+      position: absolute;
+      bottom: 5px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 6px;
+      height: 6px;
+      background-color: #cdc6c3;
+      border-radius: 50%; }
+    .calendarContainer .dateSelectorContainer .dateSelectorTitle {
+      z-index: 2;
+      text-align: center;
+      font-family: "LoveloBlack";
+      padding-top: 20px;
+      padding-bottom: 10px;
+      font-size: 1rem; }
+    .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesAvailableTitle {
+      z-index: 2;
+      text-align: center;
+      font-family: "LoveloBlack";
+      padding-top: 20px;
+      padding-bottom: 10px;
+      font-size: 1rem; }
+    .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesItemsContainer {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px; }
+      .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesItemsContainer .noAppointments {
+        padding-top: 1rem; }
+      .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesItemsContainer .timeItem {
+        border: 1px solid #aaa;
+        /* Borde más gris para el estado normal */
+        flex: 0 1 calc(50% - 10px);
+        box-sizing: border-box;
+        text-align: center;
+        padding: 10px;
+        background-color: white;
+        cursor: pointer; }
+      .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesItemsContainer .timeItem:hover {
+        border: 1px solid black;
+        background-color: #f4f4f4; }
+      .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesItemsContainer .selected {
+        background-color: #006edc;
+        color: white; }
+      .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesItemsContainer .selected:hover {
+        background-color: #006edc;
+        color: white; }
+  .calendarContainer .button {
+    margin-top: 1rem;
+    border-radius: 1rem;
+    padding: .5rem 1rem;
+    background-color: #d4b2a7;
+    color: white; }
+  .calendarContainer .button:hover {
+    background-color: #a38f85; }
 
 .main-content {
   filter: blur(2px); }
