--- a/scss/_appointments.scss
+++ b/scss/_appointments.scss
@@ -6,6 +6,51 @@
   min-height: 90vh;
   padding: 1rem;
   margin-top: 2rem;
+  position: relative;
+  .modal-overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+    .modal-content{
+      background: $isabeline;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      max-width: 400px;
+      width: 100%;
+      .modal-title{
+        font-size: 20px;
+        font-weight: bold;
+        margin-bottom: 10px;
+      }
+      .modal-description{
+        font-size: 16px;
+        margin-bottom: 20px;
+      }
+      .button-container{
+        display: flex;
+        justify-content: center;
+        .whatsapp-button{
+          border-radius: 1rem;
+          padding: .6rem 1rem;
+          background-color: $light;
+          color: $dark;
+          border: 2px solid $cinereous;
+        }
+        .whatsapp-button:hover{
+          background-color: $cinereous;
+        }
+      }
+    }
+  }
   .title {
     z-index: 2;
     text-align: center;
