--- a/src/App.css
+++ b/src/App.css
@@ -1178,9 +1178,8 @@ html a {
 
 .calendarContainer {
   min-height: 90vh;
-  padding: 1rem;
-  margin-top: 2rem;
-  position: relative; }
+  position: relative;
+  padding-bottom: 2rem; }
   .calendarContainer .modal-overlay {
     position: fixed;
     top: 0;
@@ -1222,17 +1221,16 @@ html a {
     z-index: 2;
     text-align: center;
     font-family: "LoveloBlack";
-    padding-top: 20px;
+    padding-top: 3rem;
     padding-bottom: 10px;
     font-size: 1rem; }
   .calendarContainer .dateSelectorContainer {
-    margin-top: 2rem;
-    padding: 2rem;
     display: flex;
-    gap: 50px; }
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px; }
     .calendarContainer .dateSelectorContainer .react-calendar__tile--now {
-      background-color: #e7d7c9;
-      /* Elimina el color amarillo */ }
+      background-color: #e7d7c9; }
     .calendarContainer .dateSelectorContainer .react-calendar__tile--now:hover {
       background-color: #ede9e3; }
     .calendarContainer .dateSelectorContainer .event-day {
@@ -1254,38 +1252,35 @@ html a {
       padding-top: 20px;
       padding-bottom: 10px;
       font-size: 1rem; }
-    .calendarContainer .dateSelectorContainer .timesAvailableContainer {
-      width: 30rem; }
-      .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesAvailableTitle {
-        z-index: 2;
+    .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesAvailableTitle {
+      z-index: 2;
+      font-family: "LoveloBlack";
+      font-size: .8rem;
+      padding-bottom: 1rem; }
+    .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesItemsContainer {
+      display: flex;
+      flex-wrap: wrap;
+      flex: 1;
+      gap: 10px; }
+      .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesItemsContainer .noAppointments {
+        padding-top: 1rem; }
+      .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesItemsContainer .timeItem {
+        border: 1px solid #aaa;
+        flex: 0 0 calc(33% - 10px);
+        box-sizing: border-box;
         text-align: center;
-        font-family: "LoveloBlack";
-        padding-top: 20px;
-        padding-bottom: 10px;
-        font-size: 1rem; }
-      .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesItemsContainer {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px; }
-        .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesItemsContainer .noAppointments {
-          padding-top: 1rem; }
-        .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesItemsContainer .timeItem {
-          border: 1px solid #aaa;
-          flex: 0 0 calc(50% - 10px);
-          box-sizing: border-box;
-          text-align: center;
-          padding: 10px;
-          background-color: white;
-          cursor: pointer; }
-        .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesItemsContainer .timeItem:hover {
-          border: 1px solid black;
-          background-color: #f4f4f4; }
-        .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesItemsContainer .selected {
-          background-color: #006edc;
-          color: white; }
-        .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesItemsContainer .selected:hover {
-          background-color: #006edc;
-          color: white; }
+        padding: 10px;
+        background-color: white;
+        cursor: pointer; }
+      .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesItemsContainer .timeItem:hover {
+        border: 1px solid black;
+        background-color: #f4f4f4; }
+      .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesItemsContainer .selected {
+        background-color: #006edc;
+        color: white; }
+      .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesItemsContainer .selected:hover {
+        background-color: #006edc;
+        color: white; }
     .calendarContainer .dateSelectorContainer .detailsContainer .inputContainer {
       display: flex;
       flex-direction: column; }
@@ -1302,6 +1297,35 @@ html a {
     color: white; }
   .calendarContainer .button:hover {
     background-color: #a38f85; }
+
+@media only screen and (min-width: 768px) {
+  .calendarContainer .dateSelectorContainer .timesAvailableContainer {
+    width: 15rem; }
+    .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesAvailableTitle {
+      font-size: .9rem; }
+    .calendarContainer .dateSelectorContainer .timesAvailableContainer .timesItemsContainer .timeItem {
+      flex: 0 0 calc(50% - 10px); } }
+
+@media only screen and (min-width: 1024px) {
+  .calendarContainer {
+    margin-top: 2rem; }
+    .calendarContainer .dateSelectorContainer {
+      margin-top: 2rem;
+      padding: 2rem;
+      gap: 20px;
+      flex-direction: row; }
+      .calendarContainer .dateSelectorContainer .timesAvailableContainer {
+        text-align: center;
+        padding-top: 20px;
+        padding-bottom: 10px;
+        font-size: 1rem;
+        width: 20rem; } }
+
+@media only screen and (min-width: 1300px) {
+  .calendarContainer .dateSelectorContainer {
+    gap: 50px; }
+    .calendarContainer .dateSelectorContainer .timesAvailableContainer {
+      width: 25rem; } }
 
 .main-content {
   filter: blur(2px); }
