add loading container styles and improve loading state handling in Appointments component

--- a/scss/_appointments.scss
+++ b/scss/_appointments.scss
@@ -130,6 +130,10 @@
           color: white;
         }
       }
+      .loadingContainer{
+        display: block;
+        margin-top: 5rem
+      }
     }
     //container of appointment details.
     .detailsContainer{
